NOJIRA - enhancements to the spring test cases